# star-sim

./: .gitattributes  .gitignore  CLAUDE.md  NOTICE  README.md  STAR_SIM_SPEC.md  start.bat  start.sh
.claude/: settings.json
backend/: pyproject.toml
backend/docs/: mesa_alpha_recipe.md  mesa_helium_recipe.md  mesa_solar_recipe.md  mesa_structure_recipe.md  msg_spectra_build_recipe.md
backend/scripts/: bake_alpha_spectra.py  bake_bpass_hrd.py  bake_bpass_spectra.py  bake_mist_standalone.py  bake_posydon.py  bake_spectra.py  bake_stripped_spectra.py  bake_wd_spectra.py  bake_wr_spectra.py
backend/star_sim/: __init__.py  _baked_release.py  alpha.py  api.py  binary.py  bpass.py  fetch_alpha_baked.py  fetch_bpass.py  fetch_bpass_baked.py  fetch_coelho.py  fetch_coelho_baked.py  fetch_filters.py  fetch_gotberg.py  fetch_gotberg_baked.py  fetch_helium_baked.py  fetch_koester.py  fetch_koester_baked.py  fetch_mesa.py  fetch_mist.py  fetch_mist_baked.py  fetch_mist_iso.py  fetch_mist_iso_baked.py  fetch_posydon.py  fetch_posydon_baked.py  fetch_powr.py  fetch_powr_baked.py  fetch_tmap.py  helium.py  isochrone.py  lane_emden.py  photometry.py  posydon.py  posydon_co.py  provider.py  spectra.py  state.py  structure.py  supernova.py
backend/star_sim/data/: filters.json  gotberg_z014.csv
backend/star_sim/providers/: __init__.py  mesa.py  mist.py  stub.py
backend/star_sim/providers/_vendor/: __init__.py
backend/tests/: conftest.py  test_alpha.py  test_alpha_spectra.py  test_binary.py  test_bpass.py  test_endgame.py  test_helium.py  test_isochrone.py  test_lane_emden.py  test_mesa_provider.py  test_mesa_vs_mist.py  test_mesa_vs_mist_solar.py  test_mist_provider.py  test_photometry.py  test_posydon.py  test_posydon_co.py  test_posydon_co_he.py  test_rotation_axis.py  test_spectra.py  test_stripped_spectra.py  test_structure.py  test_stub_provider.py  test_supernova.py  test_wd_spectra.py  test_wr_spectra.py
backend/tests/fixtures/: synthetic_history.data
data/: README.md
docs/memory/: MEMORY.md  always-commit-push.md  no-parallel-agents-without-permission.md  session-end-ritual.md  star-sim-alpha-overlay.md  star-sim-apbp-peculiarity.md  star-sim-asteroseismology.md  star-sim-binary-stripped.md  star-sim-co-hms-rlo.md  (+29 more)
frontend/: index.html  styles.css
(+35 files in other folders)
